examples/ipmx/valid/04_jpegxs.sdp
v=0
o=- 5000 1 IN IP4 192.168.1.1
s=IPMX JPEG-XS Video (TR-10-11)
t=0 0
a=extmap:1 urn:ietf:params:rtp-hdrext:smpte-tc
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.1.10/64
b=AS:50000
a=source-filter: incl IN IP4 239.100.1.10 192.168.1.1
a=rtpmap:96 jxsv/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; SSN=ST2110-22:2019; TP=2110TPNL; profile=High444.12; level=2k-1; sublevel=Sublev3bpp; transmode=1; packetmode=0; measuredpixclk=148500000; vtotal=1125; htotal=2200; IPMX
a=mediaclk:direct=0
