examples/ipmx/invalid/01_missing_extmap.sdp
v=0
o=- 3000 1 IN IP4 192.168.1.1
s=IPMX Invalid — Valid ST2110 But No extmap Anywhere
t=0 0
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.1.1/64
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; TP=2110TPN
a=mediaclk:direct=0
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
